RESOLVED FIXED273749
[Site Isolation] Several tests crash in http/tests/workers/service
https://bugs.webkit.org/show_bug.cgi?id=273749
Summary [Site Isolation] Several tests crash in http/tests/workers/service
Charlie Wolfe
Reported 2024-05-05 18:18:48 PDT
We were adding null security origins for out-of-process frames in `WebLoaderStrategy::scheduleLoadFromNetworkProcess`, which caused the network process to crash when trying to convert them to a string. Instead, use opaque origins and change `frameAncestorOrigins` to hold Ref, as it can no longer be null.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-05-05 18:18:58 PDT
Charlie Wolfe
Comment 2 2024-05-05 18:20:22 PDT
EWS
Comment 3 2024-05-06 16:43:57 PDT
Committed 278432@main (f7fb91f7b166): <https://commits.webkit.org/278432@main> Reviewed commits have been landed. Closing PR #28154 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.