Source/WebKit/NetworkProcess/NetworkResourceLoadParameters.h
@@ -65,7 +65,7 @@ public:
         , bool shouldRestrictHTTPResponseAccess
         , WebCore::PreflightPolicy
         , bool shouldEnableCrossOriginResourcePolicy
-        , Vector<RefPtr<WebCore::SecurityOrigin>>&& frameAncestorOrigins
+        , Vector<Ref<WebCore::SecurityOrigin>>&& frameAncestorOrigins
         , bool pageHasResourceLoadClient
         , std::optional<WebCore::FrameIdentifier> parentFrameID
         , bool crossOriginAccessControlCheckEnabled
@@ -112,7 +112,7 @@ public:
     bool shouldRestrictHTTPResponseAccess { false };
     WebCore::PreflightPolicy preflightPolicy { WebCore::PreflightPolicy::Consider };
     bool shouldEnableCrossOriginResourcePolicy { false };
-    Vector<RefPtr<WebCore::SecurityOrigin>> frameAncestorOrigins;
+    Vector<Ref<WebCore::SecurityOrigin>> frameAncestorOrigins;
     bool pageHasResourceLoadClient { false };
     std::optional<WebCore::FrameIdentifier> parentFrameID;
     bool crossOriginAccessControlCheckEnabled { true };
